--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 								<img src="images/soraya.png" alt="png soraya">
 								<div class="textCenter">
 									<h3>Soraya</h3>
-									<p>Longboard</h3>
+									<p>Longboard</p>
 								</div>
 						</article>
 						<article class="diretionColumn">
